Fix Auth Service and Implement User Service
