# ServerAPI/src/api/controllers/auth.controller.ts
@@ -1,36 +1,41 @@
 // import { responseHandler } from "src/middlewares/response.middleware";
 import { Body, Post, Route, SuccessResponse, Tags } from "tsoa";
-import { AuthLoginDTO, AuthRegisterDTO, AuthTokenDTO } from "../../application/dtos/auth.dto";
+import {
+  AuthDTO,
+  AuthTokenDTO,
+} from "../../application/dtos/auth.dto";
 import { UserDTO } from "../../application/dtos/user.dto";
-import { responseHandler, ResponseSuccessType } from "../middlewares/response.middleware";
 import AuthService from "../../application/services/auth.service";
+import { prisma } from "../../config/prisma";
+import supabase from "../../config/supabase";
 import AuthenticationProvider from "../../infrastructure/authentication/authentication.provider";
 import UserRepository from "../../infrastructure/repositories/user.repository";
-import supabase from "../../config/supabase";
-import { prisma } from "../../config/prisma";
-
-
+import {
+  responseHandler,
+  ResponseSuccessType,
+} from "../middlewares/response.middleware";
 
 @Tags("Authentication")
 @Route("auth")
 export class AuthController {
+  
   @Post("register")
   @SuccessResponse("201")
   public async register(
-    @Body() requestBody: AuthRegisterDTO
-  ): Promise<ResponseSuccessType<UserDTO>> {
+    @Body() requestBody: AuthDTO
+  ): Promise<ResponseSuccessType<AuthTokenDTO>> {
     const service = new AuthService(
       new AuthenticationProvider(supabase()),
       new UserRepository(prisma())
     );
     const response = await service.register(null, requestBody, null);
-    return responseHandler<UserDTO>(response);
+    return responseHandler<AuthTokenDTO>(response);
   }
 
   @Post("login")
   @SuccessResponse("200")
   public async login(
-    @Body() requestBody: AuthLoginDTO
+    @Body() requestBody: AuthDTO
   ): Promise<ResponseSuccessType<AuthTokenDTO>> {
     const service = new AuthService(
       new AuthenticationProvider(supabase()),
