# ServerAPI/src/application/dtos/auth.dto.ts
@@ -1,22 +1,27 @@
-import { BaseDTO } from './base.dto';
-export interface AuthDetailDTO extends BaseDTO {
-  email: string | undefined;
-  phone: string | undefined;
-  role: string | undefined;
-  createdAt: string;
-  updatedAt: string | undefined;
+import { BaseDTO } from "./base.dto";
+
+
+export interface UserMetadataCustom {
+  username: string | null;
+  fullName: string | null;
+  userId: string | null;
+  profilePicture: string | null;
 }
 
-export interface AuthRegisterDTO {
+
+
+export interface AuthDetailDTO extends BaseDTO {
+  email: string;
+  role: string;
+  verified: boolean;
+  metadata: UserMetadataCustom;
+}
+
+export interface AuthDTO {
   email: string;
   password: string;
-  username: string;
-  fullName: string;
 }
-export interface AuthLoginDTO {
-  email: string;
-  password: string;
-}
+
 
 export interface AuthTokenDTO {
   token: string;
