# ServerAPI/src/application/dtos/user.dto.ts
@@ -1,6 +1,8 @@
 import { BaseDTO } from "./base.dto";
 import { FriendRequestDTO } from "./friend.request.dto";
 
+
+
 export interface UserDTO extends BaseDTO {
   username: string;
   fullName?: string;
@@ -9,7 +11,6 @@ export interface UserDTO extends BaseDTO {
   linkedin?: string;
   facebook?: string;
   instagram?: string;
-  email?: string;
   phoneNumber?: string;
   createdAt: Date;
 }
@@ -19,4 +20,29 @@ export interface UserPersonalDTO extends UserDTO {
   ReceivedRequests?: FriendRequestDTO[];
   Friends?: UserDTO[];
   updatedAt: Date;
+}
+
+
+export interface UserCreateDTO {
+  username: string;
+  fullName: string;
+}
+
+export interface UpdateUsernameDTO {
+  username: string;
+}
+
+export interface UpdateFullNameDTO {
+  fullName: string;
+}
+
+export interface UpdateProfilePictureDTO {
+  profilePicture: File;
+}
+
+export interface UpdateLinksDTO { 
+  twitter?: string;
+  linkedin?: string;
+  facebook?: string;
+  instagram?: string;
 }
