# ServerAPI/src/application/services/user.service.ts
@@ -1,15 +1,20 @@
+import { AuthDetailDTO } from "../dtos/auth.dto";
+import {
+  UpdateFullNameDTO,
+  UpdateLinksDTO,
+  UpdateUsernameDTO,
+  UserCreateDTO,
+  UserDTO,
+} from "../dtos/user.dto";
+import { IAuthenticationProvider } from "../interfaces/authentication/authentication.provider";
+import { IUserRepository } from "../interfaces/persistence/user.repository";
 
-import { IUserRepository } from '../interfaces/persistence/user.repository';
-
-
-class UserService {
-    private userRepository: IUserRepository;
-    constructor(userRepository: IUserRepository) {
-        this.userRepository = userRepository;
-    }
-
-
-    //TODO: Profile Picture
-    //TODO: Update Links
-    //TODO: Update Profile
+//TODO: Search Service
+export default class UserService {
+  private userRepository: IUserRepository;
+  constructor(
+    userRepository: IUserRepository,
+  ) {
+    this.userRepository = userRepository;
+  }
 }
